Implement new validation procedure.