@@ -14,12 +14,12 @@ import org.monarchinitiative.lirical.core.service.PhenotypeService;
 import org.monarchinitiative.lirical.io.analysis.PhenopacketData;
 import org.monarchinitiative.maxodiff.config.MaxodiffDataResolver;
 import org.monarchinitiative.maxodiff.config.MaxodiffPropsConfiguration;
+import org.monarchinitiative.maxodiff.core.SimpleTerm;
 import org.monarchinitiative.maxodiff.core.analysis.*;
 import org.monarchinitiative.maxodiff.core.analysis.refinement.*;
+import org.monarchinitiative.maxodiff.core.model.*;
 import org.monarchinitiative.maxodiff.lirical.PhenopacketFileParser;
 import org.monarchinitiative.maxodiff.lirical.*;
-import org.monarchinitiative.maxodiff.core.model.DifferentialDiagnosis;
-import org.monarchinitiative.maxodiff.core.model.Sample;
 import org.monarchinitiative.maxodiff.core.service.BiometadataService;
 import org.monarchinitiative.phenol.annotations.formats.hpo.HpoDisease;
 import org.monarchinitiative.phenol.annotations.formats.hpo.HpoDiseases;
@@ -34,6 +34,7 @@ import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.zip.GZIPOutputStream;
 
@@ -107,6 +108,7 @@ public class NewBenchmarkCommand extends BenchmarkCommand {
             // Make maxodiffRefiner
             MaxodiffDataResolver maxodiffDataResolver = MaxodiffDataResolver.of(maxoDataPath);
             MaxodiffPropsConfiguration maxodiffPropsConfiguration = MaxodiffPropsConfiguration.createConfig(maxodiffDataResolver);
+            Map<SimpleTerm, Set<SimpleTerm>> hpoToMaxoTermMap = maxodiffPropsConfiguration.maxoAnnotsMap();
 
             Map<String, DiffDiagRefiner> refiners = new HashMap<>();
             refiners.put("MaxoDiff", maxodiffPropsConfiguration.diffDiagRefiner("score"));
@@ -117,12 +119,23 @@ public class NewBenchmarkCommand extends BenchmarkCommand {
             BiometadataService biometadataService = maxodiffPropsConfiguration.biometadataService();
 
             try (BufferedWriter writer = openWriter(outputName); CSVPrinter printer = CSVFormat.DEFAULT.print(writer)) {
-                printer.printRecord("phenopacket", "removed_ids", "n_diseases", "weight",
-                        "maxo_id", "maxo_label", "maxo_final_score", "changed_disease_id",
-                        "orig_disease_rank", "maxo_disease_rank", "orig_disease_score", "maxo_disease_score",
-                        "maxo_ascertained_removed_ids", "maxo_ascertained_all_ids", "refiner_type"); // header
+                printer.printRecord("phenopacket", "all_sample_ids", "n_sample_ids", "n_diseases", "weight",
+                        "maxo_id", "maxo_label", "maxo_final_score", "n_all_maxo_hpo_ids",
+                        "top_maxo_hpo_ids", "n_top_maxo_hpo_ids", "mean_n_disc_phen", "diff",
+                        "validation_rank", "validation_weightedRank",
+                        "validation_score", "refiner_type"); // header
 
-                for (int i = 0; i < phenopacketPaths.size(); i++) {
+
+                Set<TermId> allMaxoTerms = MaxoHpoTermIdMaps.getMaxoToHpoTermIdMap(hpoToMaxoTermMap).keySet();
+                Set<TermId> allMaxoAscertainablePhenotypes = new HashSet<>();
+                long allMaxoAscertainablePhenoypesCalcTime = 0;
+                //5302 phenotypes discoverable by 257 MAxO terms
+                double nAllMaxoTerms = 257;
+                int nAllMaxoDiscoverablePhenotypes = 5302;
+                double meanNDiscoverablePhenotypesAllMaxoTerms = nAllMaxoTerms / nAllMaxoDiscoverablePhenotypes;
+                int p = 1;
+                int nPhenopackets = phenopacketPaths.size();
+                for (int i = 0; i < nPhenopackets; i++) {
                     try {
 
                         Path pPath = phenopacketPaths.get(i);
@@ -139,6 +152,8 @@ public class NewBenchmarkCommand extends BenchmarkCommand {
                         List<TermId> termIdsToRemove = new ArrayList<>();
                         List<TermId> includedIds = new ArrayList<>(phenopacketData.presentHpoTermIds().toList());
                         List<TermId> excludedIds = new ArrayList<>(phenopacketData.excludedHpoTermIds().toList());
+                        List<TermId> allSampleHpoTerms = Stream.of(sample.presentHpoTermIds(), sample.excludedHpoTermIds())
+                                .flatMap(Collection::stream).toList();
                         if (removeIdsFile != null) {
                             termIdsToRemove = getTermIdsToRemove(phenopacketName, removeIdsFile);
                             termIdsToRemove.forEach(includedIds::remove);
@@ -158,7 +173,7 @@ public class NewBenchmarkCommand extends BenchmarkCommand {
                         String outFilename = String.join("_",
                                 phenopacketName.replace(".json", ""),
                                 "initial",
-                                "removedTerms",
+//                                "removedTerms",
                                 "lirical",
                                 "results");
                         String ddOutputPath = String.join(File.separator, outputDir.toString(), outFilename + ".csv");
@@ -168,8 +183,62 @@ public class NewBenchmarkCommand extends BenchmarkCommand {
 
                         Map<Integer, Map<TermId, List<DifferentialDiagnosis>>> nDiseaseMaxoTermToDifferentialDiagnosesMap = new HashMap<>();
                         for (Map.Entry<String, DiffDiagRefiner> e : refiners.entrySet()) {
-                            HpoDiseases hpoaDiseases = e.getValue().getHPOADiseases();
                             for (int nDiseases : nDiseasesList) {
+                                MaxoHpoTermProbabilities maxoHpoTermProbabilities = null;
+                                List<DifferentialDiagnosis> initialDiagnoses = List.of();
+                                if (e.getValue() instanceof MaxoDiffRefiner) {
+                                    HpoDiseases hpoDiseases = phenotypeService.diseases();
+                                    initialDiagnoses = differentialDiagnoses.subList(0, nDiseases);
+
+                                    DiseaseModelProbability diseaseModelProbability = null;
+                                    switch (diseaseProbModel) {
+                                        case "ranked" -> diseaseModelProbability = DiseaseModelProbability.ranked(initialDiagnoses);
+                                        case "softmax" -> diseaseModelProbability = DiseaseModelProbability.softmax(initialDiagnoses);
+                                        case "expDecay" -> diseaseModelProbability = DiseaseModelProbability.exponentialDecay(initialDiagnoses);
+                                    }
+
+                                    maxoHpoTermProbabilities = new MaxoHpoTermProbabilities(hpoDiseases,
+                                            hpoToMaxoTermMap,
+                                            initialDiagnoses,
+                                            diseaseModelProbability);
+
+                                    if (allMaxoAscertainablePhenotypes.isEmpty() && meanNDiscoverablePhenotypesAllMaxoTerms == 0) {
+                                        LOGGER.info("Getting All Maxo Ascertainable Phenotypes...");
+                                        MaxoHpoTermProbabilities allMaxoHpoTermProbabilities = new MaxoHpoTermProbabilities(hpoDiseases,
+                                                hpoToMaxoTermMap,
+                                                differentialDiagnoses,
+                                                diseaseModelProbability);
+
+                                        List<DifferentialDiagnosis> orderedDiagnoses = differentialDiagnoses.stream()
+                                                .sorted(Comparator.comparingDouble(DifferentialDiagnosis::score).reversed())
+                                                .toList();
+                                        List<HpoDisease> diseases = e.getValue().getDiseases(orderedDiagnoses);
+                                        Map<TermId, List<HpoFrequency>> hpoTermCounts = e.getValue().getHpoTermCounts(diseases);
+                                        Map<TermId, Set<TermId>> fullMaxoToHpoTermIdMap = e.getValue().getMaxoToHpoTermIdMap(List.of(), hpoTermCounts);
+
+                                        int m = 1;
+                                        int nMaxoTerms = allMaxoTerms.size();
+                                        long start = System.currentTimeMillis();
+                                        for (TermId maxoId : allMaxoTerms) {
+                                            LOGGER.info(maxoId.toString());
+                                            Set<TermId> maxoAscertainablePhenotypes = allMaxoHpoTermProbabilities.getDiscoverableByMaxoHpoTerms(sample, maxoId, fullMaxoToHpoTermIdMap);
+                                            allMaxoAscertainablePhenotypes.addAll(maxoAscertainablePhenotypes);
+                                            float percent = (((float) m) / nMaxoTerms) * 100;
+                                            LOGGER.info("Finished {} of {} MAxO terms. {}% complete.", m, nMaxoTerms, percent);
+                                            m++;
+                                        }
+                                        long end = System.currentTimeMillis();
+                                        allMaxoAscertainablePhenoypesCalcTime = (end - start) / 1000;
+
+                                        meanNDiscoverablePhenotypesAllMaxoTerms = (double) allMaxoAscertainablePhenotypes.size() / allMaxoTerms.size();
+
+                                        Path allMaxoAscPhenPath = getAllMaxoAscPhenPath("allMaxoAscPhenotypes");
+
+                                        writeAllMaxoAscPhenotypes(allMaxoAscertainablePhenotypes, allMaxoAscPhenPath);
+                                    }
+                                }
+
+                                Map<Double, Integer> weightToTopMaxoNAscertainablePhenotypesMap = new HashMap<>();
                                 for (double weight : weights) {
                                     RefinementOptions options = RefinementOptions.of(nDiseases, weight);
                                     LOGGER.info("{}: {}", e.getKey(), e.getValue());
@@ -178,15 +247,45 @@ public class NewBenchmarkCommand extends BenchmarkCommand {
                                     List<HpoDisease> diseases = e.getValue().getDiseases(orderedDiagnoses);
                                     Map<TermId, List<HpoFrequency>> hpoTermCounts = e.getValue().getHpoTermCounts(diseases);
                                     Map<TermId, Set<TermId>> maxoToHpoTermIdMap = e.getValue().getMaxoToHpoTermIdMap(termIdsToRemove, hpoTermCounts);
-                                    Map<TermId, Set<TermId>> fullMaxoToHpoTermIdMap = e.getValue().getMaxoToHpoTermIdMap(List.of(), hpoTermCounts);
+
                                     Map<TermId, List<DifferentialDiagnosis>> maxoTermToDifferentialDiagnosesMap = null;
                                     if (!(e.getValue() instanceof MaxoDiffRefiner) & !(e.getValue() instanceof DummyDiffDiagRefiner)) {
                                         maxoTermToDifferentialDiagnosesMap = getMaxoTermDifferentialDiagnosesMap(
                                                 e.getValue(), options, sample, engine, nDiseaseMaxoTermToDifferentialDiagnosesMap, maxoToHpoTermIdMap);
                                     }
-                                    // Get List of Refinement results: maxo term scores and frequencies
-                                    RefinementResults refinementResults = e.getValue().run(sample, orderedDiagnoses, options, engine,
-                                            maxoToHpoTermIdMap, hpoTermCounts, maxoTermToDifferentialDiagnosesMap);
+
+                                    Set<TermId> initialDiagnosesIds = Set.of();
+                                    RefinementResults refinementResults;
+                                    if (e.getValue() instanceof MaxoDiffRefiner) {
+
+                                        initialDiagnosesIds = initialDiagnoses.stream()
+                                                .map(DifferentialDiagnosis::diseaseId)
+                                                .collect(Collectors.toSet());
+
+                                        var diseaseSubsetOptions = AnalysisOptions.builder()
+                                //                    .setDiseaseDatabases(List.of(DiseaseDatabase.OMIM))
+                                                .useStrictPenalties(runConfiguration.strict)
+                                                .useGlobal(runConfiguration.globalAnalysisMode)
+                                                .pretestProbability(PretestDiseaseProbabilities.uniform(initialDiagnosesIds))
+                                                .addTargetDiseases(initialDiagnosesIds)
+                                //                .includeDiseasesWithNoDeleteriousVariants(true)
+                                                .build();
+                                        LiricalDifferentialDiagnosisEngine diseaseSubsetEngine = liricalDifferentialDiagnosisEngineConfigurer.configure(diseaseSubsetOptions);
+
+                                        RankMaxo rankMaxo = new RankMaxo(hpoToMaxoTermMap, maxoToHpoTermIdMap, maxoHpoTermProbabilities, diseaseSubsetEngine);
+
+                                        refinementResults = e.getValue().run(sample,
+                                                orderedDiagnoses,
+                                                options,
+                                                rankMaxo,
+                                                hpoTermCounts,
+                                                maxoToHpoTermIdMap);
+                                    } else {
+                                        // Get List of Refinement results: maxo term scores and frequencies
+                                        refinementResults = e.getValue().run(sample, orderedDiagnoses, options, engine,
+                                                maxoToHpoTermIdMap, hpoTermCounts, maxoTermToDifferentialDiagnosesMap);
+                                    }
+
                                     List<MaxodiffResult> resultsList = new ArrayList<>(refinementResults.maxodiffResults().stream().toList());
                                     if (e.getValue() instanceof MaxoDiffKolmogorovSmirnovRefiner) {
                                         resultsList.sort(Comparator.<MaxodiffResult>comparingDouble(mr -> mr.maxoTermScore().scoreDiff()));
@@ -202,135 +301,76 @@ public class NewBenchmarkCommand extends BenchmarkCommand {
                                     writeToJsonFile(maxodiffResultsFilePath, refinementResults);
 
                                     // Test new validation procedure
-                                    // Calculate discoverable HPO terms
-                                    Map<TermId, Integer> maxoTermDiscoverablePhenotypeSums = new HashMap<>();
-                                    for (MaxodiffResult result : resultsList) {
-                                        TermId maxoId = TermId.of(result.maxoTermScore().maxoId());
-                                        int maxoTermDiscoverablePhenotypeSum = 0;
-                                        for (DifferentialDiagnosis diagnosis : orderedDiagnoses) {
-                                            TermId diseaseId = diagnosis.diseaseId();
-                                            List<TermId> phenopacketDiscoverablePhenotypes = getPhenopacketDiscoverablePhenotypes(diseaseId,
-                                                    hpoaDiseases, termIdsToRemove);
-                                            LOGGER.info("pPackDiscPhenotypes = {}", phenopacketDiscoverablePhenotypes);
-                                            List<TermId> maxoTermInferredExcludedPhenotypes = getMaxoTermInferredExcludedPhenotypes(phenopacketData,
-                                                    hpoaDiseases, maxoToHpoTermIdMap.get(maxoId));
-                                            LOGGER.info("maxoInferExclPhenotypes = {}", maxoTermInferredExcludedPhenotypes);
-                                            Map<TermId, Set<TermId>> maxoTermDiscoverablePhenotypes = getMaxoTermDiscoverablePhenotypes(phenopacketDiscoverablePhenotypes,
-                                                    maxoTermInferredExcludedPhenotypes, maxoId);
-                                            LOGGER.info("pPack target disease: {}", phenopacketData.diseaseIds().get(0));
-                                            LOGGER.info("diagnosis {}: {}", orderedDiagnoses.indexOf(diagnosis)+1, diseaseId);
-                                            LOGGER.info("MAxO term {}: {} {}", resultsList.indexOf(result)+1, maxoId, biometadataService.maxoLabel(maxoId.toString()).orElse("unknown"));
-                                            LOGGER.info("maxoDiscPhenotypes = {}", maxoTermDiscoverablePhenotypes);
-                                            maxoTermDiscoverablePhenotypeSum += maxoTermDiscoverablePhenotypes.get(maxoId).size();
-                                        }
-                                        maxoTermDiscoverablePhenotypeSums.put(maxoId, maxoTermDiscoverablePhenotypeSum);
+                                    if (e.getValue() instanceof MaxoDiffRefiner) {
+                                        assert maxoHpoTermProbabilities != null;
+                                        CandidateDiseaseScores candidateDiseaseScores = new CandidateDiseaseScores(maxoHpoTermProbabilities);
+                                        // Get highest score MAxO term id
+                                        MaxodiffResult topResult = resultsList.getFirst();
+                                        TermId topMaxoId = TermId.of(topResult.maxoTermScore().maxoId());
+
+                                        String maxScoreTermLabel = biometadataService.maxoLabel(topMaxoId.toString()).orElse("unknown");
+                                        double maxScoreValue = topResult.maxoTermScore().scoreDiff();
+
+                                        LOGGER.info( "{}: n Diseases = {}, Weight = {}", e.getKey(), nDiseases, weight);
+
+                                        LOGGER.info("Max Score: {} ({}) = {}", topMaxoId, maxScoreTermLabel, maxScoreValue);
+
+                                        List<DifferentialDiagnosis> maxoTermDiagnoses = candidateDiseaseScores
+                                                .getScoresForMaxoTerm(sample, topMaxoId, engine, initialDiagnosesIds, hpoToMaxoTermMap);
+
+                                        LOGGER.info("Getting Top Maxo Ascertainable Phenotypes...");
+                                        Set<TermId> topMaxoAscertainablePhenotypes = maxoHpoTermProbabilities.getDiscoverableByMaxoHpoTerms(sample, topMaxoId, maxoToHpoTermIdMap);
+
+                                        double diff = topMaxoAscertainablePhenotypes.size() - meanNDiscoverablePhenotypesAllMaxoTerms;
+
+                                        double validationScore_rank = ValidationModel.rankDiff(initialDiagnoses, maxoTermDiagnoses).validationScore();
+                                        double validationScore_weightedRank = ValidationModel.weightedRankDiff(initialDiagnoses, maxoTermDiagnoses).validationScore();
+                                        double validationScore_score = ValidationModel.scoreDiff(initialDiagnoses, maxoTermDiagnoses).validationScore();
+
+                                        writeResults(phenopacketName, allSampleHpoTerms, allSampleHpoTerms.size(), nDiseases, weight,
+                                            topMaxoId.toString(), maxScoreTermLabel, maxScoreValue, nAllMaxoDiscoverablePhenotypes,
+                                                topMaxoAscertainablePhenotypes, topMaxoAscertainablePhenotypes.size(),
+                                                meanNDiscoverablePhenotypesAllMaxoTerms, diff, validationScore_rank,
+                                                validationScore_weightedRank, validationScore_score, e.getKey(), printer);
+
                                     }
-
-                                    String maxoDiscoverableOutFilename = String.join("_",
-                                            phenopacketName.replace(".json", ""),
-                                            "n" + nDiseases,
-                                            "w" + weight,
-                                            e.getKey(),
-                                            "discoverable",
-                                            "phenotypes");
-                                    String maxoDiscoverableOutputPath = String.join(File.separator, outputDir.toString(), maxoDiscoverableOutFilename + ".csv");
-                                    writeDiscoverablePhenotypeResults(phenopacketName, maxoTermDiscoverablePhenotypeSums, Path.of(maxoDiscoverableOutputPath));
-
-                                    // Old validation procedure
-                                    // Take the MaXo term that has the highest score
-                                    MaxodiffResult topResult = resultsList.get(0);
-                                    String maxScoreMaxoTermId = topResult.maxoTermScore().maxoId();
-                                    String maxScoreTermLabel = biometadataService.maxoLabel(maxScoreMaxoTermId).orElse("unknown");
-                                    double maxScoreValue = topResult.maxoTermScore().scoreDiff();
-                                    TermId changedDiseaseId = null;
-                                    int origRank = 0;
-                                    double origLR = 0;
-                                    int maxoRank = 0;
-                                    double maxoLR = 0;
-                                    Set<TermId> removedIdsMaxoAscertained = new HashSet<>();
-                                    Set<TermId> topMaxoHpoIds = fullMaxoToHpoTermIdMap.get(TermId.of(maxScoreMaxoTermId));
-
-                                    if (removeIdsFile != null) {
-                                        termIdsToRemove.stream().filter(topMaxoHpoIds::contains).forEach(includedIds::add);
-                                        termIdsToRemove.stream().filter(topMaxoHpoIds::contains).forEach(excludedIds::add);
-                                        termIdsToRemove.stream().filter(topMaxoHpoIds::contains).forEach(removedIdsMaxoAscertained::add);
-                                        sample = Sample.of(phenopacketData.sampleId(), includedIds, excludedIds);
-                                        List<DifferentialDiagnosis> differentialDiagnosesAddTermsBack = engine.run(sample);
-                                        // Summarize the LIRICAL results.
-                                        String addOutFilename = String.join("_",
-                                                phenopacketName.replace(".json", ""),
-                                                maxScoreMaxoTermId,
-                                                "n" + nDiseases,
-                                                "w" + weight,
-                                                e.getKey(),
-                                                "addTerms",
-                                                "lirical",
-                                                "results");
-                                        String addDdOutputPath = String.join(File.separator, outputDir.toString(), addOutFilename + ".csv");
-                                        writeDifferentialDiagnosisResults(phenopacketName, differentialDiagnosesAddTermsBack, Path.of(addDdOutputPath));
-
-                                        changedDiseaseId = phenopacketData.diseaseIds().get(0); //phenopacket target disease
-                                        TermId finalChangedDiseaseId1 = changedDiseaseId;
-                                        List<DifferentialDiagnosis> changedDiseaseOrigDiagnosisList = differentialDiagnoses
-                                                .stream().filter(dd -> dd.diseaseId().equals(finalChangedDiseaseId1)).toList();
-                                        if (!changedDiseaseOrigDiagnosisList.isEmpty()) {
-                                            DifferentialDiagnosis changedDiseaseOrigDiagnosis = changedDiseaseOrigDiagnosisList.get(0);
-                                            origRank = differentialDiagnoses.indexOf(changedDiseaseOrigDiagnosis) + 1;
-                                            origLR = changedDiseaseOrigDiagnosis.lr();
-                                        }
-                                        List<DifferentialDiagnosis> changedDiseaseAddBackDiagnosisList = differentialDiagnosesAddTermsBack
-                                                .stream().filter(dd -> dd.diseaseId().equals(finalChangedDiseaseId1)).toList();
-                                        if (!changedDiseaseAddBackDiagnosisList.isEmpty()) {
-                                            DifferentialDiagnosis changedDiseaseAddBackDiagnosis = changedDiseaseAddBackDiagnosisList.get(0);
-                                            maxoRank = differentialDiagnosesAddTermsBack.indexOf(changedDiseaseAddBackDiagnosis) + 1;
-                                            maxoLR = changedDiseaseAddBackDiagnosis.lr();
-                                            String outFilenameMaxo = String.join("_",
-                                                    phenopacketName.replace(".json", ""),
-                                                    maxScoreMaxoTermId,
-                                                    "differential",
-                                                    "diagnoses");
-                                            Path outFilepathMaxo = Path.of(String.join(File.separator, outputDir.toString(), outFilenameMaxo + ".tsv"));
-                                            LOGGER.info(outFilepathMaxo.toString());
-                                            try (BufferedWriter writer2 = openWriter(outFilepathMaxo);
-                                                 CSVPrinter printer2 = CSVFormat.DEFAULT.print(writer2)) {
-                                                printer2.printRecord("disease_id", "score", "lr");
-                                                writeDifferentialDiagnosesResultsFile(changedDiseaseAddBackDiagnosisList, printer2);
-                                            } catch (Exception ex) {
-                                                LOGGER.info(ex.getMessage());
-                                            }
-                                        }
-                                    }
-
-                                    LOGGER.info(e.getKey() + ": n Diseases = " + nDiseases + ", Weight = " + weight);
-
-                                    LOGGER.info("Max Score: " + maxScoreMaxoTermId + " (" + maxScoreTermLabel + ")" + " = " + maxScoreValue);
-                                    writeResults(phenopacketName, termIdsToRemove, nDiseases, weight,
-                                            maxScoreMaxoTermId, maxScoreTermLabel, maxScoreValue, changedDiseaseId,
-                                            origRank, maxoRank, origLR, maxoLR, removedIdsMaxoAscertained, topMaxoHpoIds,
-                                            e.getKey(), printer);
 
                                     if (e.getKey().equals("rank") | e.getKey().equals("ddScore") | e.getKey().equals("ksTest")) {
                                         break;
                                     }
                                 }
 
-                                TermId diseaseId = phenopacketData.diseaseIds().get(0);
-
                                 if (e.getKey().equals("ksTest")) {
                                     break;
                                 }
                             }
                         }
-                        LOGGER.info("Finished benchmark for " + phenopacketName);
+                        float percent = (((float) p) / nPhenopackets) * 100;
+                        LOGGER.info("Finished benchmark for {} ({} of {}. {}% complete)", phenopacketName, p, nPhenopackets, percent);
+                        p++;
                     } catch (Exception ex) {
                         LOGGER.info(ex.getMessage());
                     }
                 }
+//                long HH =  allMaxoAscertainablePhenoypesCalcTime / 3600;
+//                long MM = (allMaxoAscertainablePhenoypesCalcTime % 3600) / 60;
+//                long SS = allMaxoAscertainablePhenoypesCalcTime % 60;
+//                String timeInHHMMSS = String.format("%02d:%02d:%02d", 2, 44, 40);
+//                LOGGER.info("All MAxO Ascertainable Phenotypes Calculated in " + timeInHHMMSS);
+
             }
             LOGGER.info("Finished benchmark.");
         }
 
         return 0;
+    }
+
+    private Path getAllMaxoAscPhenPath(String pathNameAddition) {
+        String outputFileNameStr = outputName.getFileName().toString();
+        String allMaxoAscPhenFileName = outputFileNameStr.replace(".csv", "_" + pathNameAddition + ".csv");
+        String outPath = outputName.toAbsolutePath().toString();
+        String allMaxoAscPhenPathStr = outPath.replace(outputFileNameStr, allMaxoAscPhenFileName);
+        return Path.of(allMaxoAscPhenPathStr);
     }
 
 
@@ -376,37 +416,41 @@ public class NewBenchmarkCommand extends BenchmarkCommand {
      * Write results of a single benchmark into the provided {@code printer}.
      */
     private static void writeResults(String phenopacketName,
-                                     List<TermId> removedIds,
+                                     List<TermId> sampleIds,
+                                     int nSampleIds,
                                      int nDiseases,
                                      double weight,
                                      String maxoId,
                                      String maxoLabel,
                                      double maxoFinalScore,
-                                     TermId changedDiseaseId,
-                                     int origRank,
-                                     int maxoRank,
-                                     double origScore,
-                                     double maxoScore,
-                                     Set<TermId> removedIdsMaxoAscertained,
-                                     Set<TermId> maxoAscertainedIds,
+                                     int nAllMaxoHpoTerms,
+                                     Set<TermId> topMaxoHpoTerms,
+                                     int nTopMaxoHpoTerms,
+                                     double meanNDiscPhenotypes,
+                                     double diff,
+                                     double validationScore_rank,
+                                     double validationScore_weightedRank,
+                                     double validationScore_score,
                                      String refinerType,
                                      CSVPrinter printer) {
 
         try {
             printer.print(phenopacketName);
-            printer.print(removedIds);
+            printer.print(sampleIds);
+            printer.print(nSampleIds);
             printer.print(nDiseases);
             printer.print(weight);
             printer.print(maxoId);
             printer.print(maxoLabel);
             printer.print(maxoFinalScore);
-            printer.print(changedDiseaseId);
-            printer.print(origRank);
-            printer.print(maxoRank);
-            printer.print(origScore);
-            printer.print(maxoScore);
-            printer.print(removedIdsMaxoAscertained);
-            printer.print(maxoAscertainedIds);
+            printer.print(nAllMaxoHpoTerms);
+            printer.print(topMaxoHpoTerms);
+            printer.print(nTopMaxoHpoTerms);
+            printer.print(meanNDiscPhenotypes);
+            printer.print(diff);
+            printer.print(validationScore_rank);
+            printer.print(validationScore_weightedRank);
+            printer.print(validationScore_score);
             printer.print(refinerType);
             printer.println();
         } catch (IOException e) {
@@ -434,85 +478,18 @@ public class NewBenchmarkCommand extends BenchmarkCommand {
         }
     }
 
-    private static List<TermId> getPhenopacketDiscoverablePhenotypes(//PhenopacketData pData,
-                                                                     TermId diseaseId,
-                                                                     HpoDiseases hpoaDiseases,
-                                                                     List<TermId> termIdsToRemove) {
-
-        HpoDisease targetDisease;
-        List<TermId> hpoIds = new ArrayList<>();
-//        TermId targetDiseaseId = pData.diseaseIds().get(0);//should be diseaseId from loop of e.g. top 5?
-        //System.out.println("getPpacketDiscPhenotypes disease Id = " + targetDiseaseId);
-        Optional<HpoDisease> targetDiseaseOpt = hpoaDiseases.diseaseById(diseaseId);
-        //System.out.println("getPpacketDiscPhenotypes targetDiseaseOpt = " + targetDiseaseOpt);
-        if (targetDiseaseOpt.isPresent()) {
-            targetDisease = targetDiseaseOpt.get();
-            hpoIds = targetDisease.annotationTermIdList();
-            //System.out.println("annotationTermIdList = " + hpoIds);
-            System.out.println("termIdsToRemove = " + termIdsToRemove);
-            hpoIds.removeAll(termIdsToRemove);
-        }
-        //System.out.println("pPacket Discoverable hpoIds = " + hpoIds);
-        return hpoIds;
-    }
-
-    private static List<TermId> getMaxoTermInferredExcludedPhenotypes(PhenopacketData pData,
-                                                                      HpoDiseases hpoaDiseases,
-                                                                      Set<TermId> maxoTermAssociatedHpoIds) {
-
-        List<TermId> phenopacketIdsMaxoAscertained = new ArrayList<>();
-        pData.presentHpoTermIds().filter(maxoTermAssociatedHpoIds::contains).forEach(phenopacketIdsMaxoAscertained::add);
-        pData.excludedHpoTermIds().filter(maxoTermAssociatedHpoIds::contains).forEach(phenopacketIdsMaxoAscertained::add);
-        System.out.println("maxoTermAssociatedHpoIds = " + maxoTermAssociatedHpoIds);
-        System.out.println("presentTermIds = " + pData.presentHpoTermIds().toList());
-        System.out.println("presentTermIdsMaxoIntersect = " + pData.presentHpoTermIds()
-                .filter(maxoTermAssociatedHpoIds::contains)
-                .distinct()
-                .toList());
-        System.out.println("exclTermIds = " + pData.excludedHpoTermIds().toList());
-        System.out.println("exclTermIdsMaxoIntersect = " + pData.excludedHpoTermIds()
-                .filter(maxoTermAssociatedHpoIds::contains)
-                .distinct()
-                .toList());
-        System.out.println("pPacketIdsMaxoAscertained = " + phenopacketIdsMaxoAscertained);
-        List<TermId> inferredExcludedTerms = new ArrayList<>();
-        if (!phenopacketIdsMaxoAscertained.isEmpty()) {
-            hpoaDiseases.diseaseIds().stream().filter(maxoTermAssociatedHpoIds::contains).forEach(inferredExcludedTerms::add);
-        }
-        System.out.println("inferredExcludedTerms = " + inferredExcludedTerms);
-        return inferredExcludedTerms;
-    }
-
-    private static Map<TermId, Set<TermId>> getMaxoTermDiscoverablePhenotypes(List<TermId> phenopacketDiscoverablePhenotypes,
-                                                                                List<TermId> inferredExcludedTerms,
-                                                                                TermId maxoId) {
-
-        Set<TermId> maxoTermDiscoverableIds = new HashSet<>(phenopacketDiscoverablePhenotypes);
-        inferredExcludedTerms.forEach(maxoTermDiscoverableIds::remove);
-        Map<TermId, Set<TermId>> maxoTermDiscoverableIdsMap = new HashMap<>();
-        maxoTermDiscoverableIdsMap.put(maxoId, maxoTermDiscoverableIds);
-        System.out.println("maxoTermDiscoverableIdsMap = " + maxoTermDiscoverableIdsMap);
-        return maxoTermDiscoverableIdsMap;
-    }
-
     /**
-     * Write results of a discoverable phenotype calculation into the provided {@code printer}.
+     * Write results of a differential diagnosis into the provided {@code printer}.
      */
-    private static void writeDiscoverablePhenotypeResults(String phenopacketName,
-                                                          Map<TermId, Integer> maxoDiscoverablePhenotypeSums,
-                                                          Path outputName) throws IOException {
+    private static void writeAllMaxoAscPhenotypes(Set<TermId> allMaxoAscPhenotypes, Path outputName) {
 
         try (BufferedWriter writer = openWriter(outputName); CSVPrinter printer = CSVFormat.DEFAULT.print(writer)) {
-            printer.printRecord("maxo_id", "discoverable_phenotype_sum"); // header
-            for (Map.Entry<TermId, Integer> entry : maxoDiscoverablePhenotypeSums.entrySet()) {
-                TermId maxoId = entry.getKey();
-                int sumDiscoverable = entry.getValue();
-                printer.print(maxoId);
-                printer.print(sumDiscoverable);
+            for (TermId hpoId : allMaxoAscPhenotypes) {
+                printer.print(hpoId);
                 printer.println();
             }
         } catch (IOException e) {
-            LOGGER.error("Error writing discoverable phenotype results for {}: {}", phenopacketName, e.getMessage(), e);
+            LOGGER.error("Error writing all MAxO ascertainable phenotype results: {}", e.getMessage(), e);
         }
     }
 
